# cowswap-mev-protector

./: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
assets/: cowswap-sprites-v4.html  cowswap-sprites-v5 (1).html  cowswap-sprites-v6.html  cowswap-sprites.html  cowswap-td-mockup.html  cowswap-towers-v10.html  cowswap-towers-v7.html  cowswap-tx-sprites.html
src/: app.rs  lib.rs  main.rs  utils.rs
src/enemies/: components.rs  mod.rs  resources.rs  systems.rs
src/game/: mod.rs  state.rs
src/mempool/: mod.rs  path.rs  resources.rs
src/menu/: mod.rs
src/resources/: mod.rs
src/towers/: components.rs  mod.rs  resources.rs  systems.rs
src/towers/systems/: combat.rs  mod.rs  placement.rs  setup.rs  visuals.rs
src/transactions/: components.rs  mod.rs  resources.rs  systems.rs
src/ui/: mod.rs
