[package]
name = "cow-mev-defense"
version = "0.1.0"
edition = "2024"

[lib]
name = "cow_mev_defense"
crate-type = ["cdylib", "rlib"]

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "png",
    "default_font",
    "webgl2",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
# getrandom 0.3 needs both the cfg flag (in .cargo/config.toml) AND this feature
# to use the browser's Web Crypto API on wasm32-unknown-unknown.
getrandom = { version = "0.3", features = ["wasm_js"] }

# Fast compilation in dev
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimized release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Tiny WASM release — cargo build --profile wasm-release --target wasm32-unknown-unknown
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
strip = "debuginfo"
